# gd_audacity_guideline_importer

./: Cargo.toml  README.md  build.rs
src/: ccll.rs  labels.rs  levels.rs  lib.rs  main.rs  types.rs
ui/: app-window.slint  main.slint
