[package]
name = "gd_audacity_guideline_importer"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1"
base64 = "0.22"
compact_str = "0.9"
constcat = "0.6"
dirs = "6"
fancy-regex = "0.14"
ordered-float = "5"
rfd = "0.15.3"
slint = "1.12.1"

[build-dependencies]
slint-build = "1.12.1"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.flate2]
version = "1"
features = ["zlib"]
